--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   display: flex;
   align-items: center;
   justify-content: space-around;
   min-height: 100vh;
   flex-direction: column;
-}
+} */
