--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,144 @@
-body {  
-  background:#0a5b90;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto Mono', monospace;
+}
+
+body {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  align-items: center;
 }
+
+header {
+  display: flex;
+  padding-top: 2rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+main > .clock-wrapper {
+  border: 2px solid #000;
+  border-radius: 50%;
+  width: 20em;
+  height: 20em;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+  padding: 1rem;
+}
+
+.clock-wrapper span {
+  position: absolute;
+  text-align: center;
+}
+
+.clock-wrapper #ls {
+  color: rgba(0, 0, 0, 0.64);
+  top: 2;
+  left: 50%
+}
+
+.clock-wrapper #cd {
+  color: rgba(0, 0, 0, 0.64);
+  top: 50%;
+  left: 90%
+}
+
+.clock-wrapper #mv {
+  color: rgba(0, 0, 0, 0.64);
+  top: 50%;
+  left: 2
+}
+
+.clock-wrapper #cp {
+  color: rgba(0, 0, 0, 0.64);
+  top: 90%;
+  left: 50%
+}
+
+.clock-wrapper #second-hand {
+  position: relative;
+  width: 0.1rem;
+  height: 6.5rem;
+  /* border: 1px solid #000; */
+  left: 50%;
+  top: 14%;
+  background-color: #FF5733; /* Bright Red */
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  transform: rotate(0deg);
+  transform-origin: 50% 100%;
+}
+
+#second-hand img {
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
+
+.clock-wrapper #minute-hand {
+  position: absolute;
+  width: 0.1rem;
+  height: 6rem;
+  /* border: 2px dashed #000; */
+  left: 50%;
+  top: 20%;
+  background-color: #00B5B8; /* Teal */
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  transform: rotate(0deg);
+  transform-origin: 50% 100%;
+}
+
+#minute-hand svg {
+  width: 1rem;
+  height: 1rem;
+  top: 0;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.clock-wrapper #hour-hand {
+  position: absolute;
+  width: 0.1rem;
+  height: 5rem;
+  /* border: 3px dashed #000; */
+  background-color: #003366; /* Dark Blue */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
+  left: 50%;
+  top: 25%;
+  transform: rotate(0deg);
+  transform-origin: 50% 100%;
+}
+
+#hour-hand svg {
+  width: 1rem;
+  height: 1rem;
+  position: inherit;
+  top: -10;
+  left: 60%;
+  transform: translate(-50%, -55%);
+}
+
+.clock-wrapper #learn {
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+  font-size: 0.875rem;
+}
+
