--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ body {
 header {
   display: flex;
   padding-top: 2rem;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  background-color: #FF5733; /* Bright Red */
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 main {
