--- a/flag.css
+++ b/flag.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,13 +7,15 @@
   text-decoration: none;
 }
 
+
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-main > .flag-wrapper {
+main > .tv-wrapper {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -22,19 +26,287 @@ main > .flag-wrapper {
   position: relative;
 }
 
-main > .flag-wrapper > #upper, #lower {
+main > .tv-wrapper > .tv-frame {
+  width: 27em;
+  height: 17em;
+  background-color: #121212;
+  background: linear-gradient(145deg, #2f2c2c, #121212);
   display: flex;
-  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.05em;
+  justify-content: center;
+  position: relative;
+  /* transform: scale(1.5); */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+}
+
+main > .tv-wrapper > .tv-frame > .tv-screen {
+  width: 26.7em;
+  height: 16.7em;
+  background-color: #41cb48;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
 }
 
-.red, .green {
-  width: 0.9rem;
-  height: 0.1em;
-  background-color: black;
+main > .tv-wrapper > .tv-frame > .tv-screen > .tv-content {
+  width: 100%;
+  height: 100%;
+  background-image: url('https://wallpapercave.com/wp/wp6661254.jpg');
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  position: relative;
+  padding: 0 0.1rem;
 }
 
-.red:nth-child(even) {
+.tv-content > .smart-apps {
+  width: 100%;
+  align-self: flex-end;
+  background: linear-gradient(145deg, #3d3131, #211d1d);
+  color: #fff;
+  padding: 0.2rem  0.5rem 0 0.5rem;
+}
+
+.smart-apps > .what-to-watch {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+  background-color: transparent;
+  width: 100%;
+  padding-bottom: 0.2rem;
+}
+
+.smart-apps > .what-to-watch > .recommendations {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.recommendations > .recommendation {
+  background-color: #fff;
+  border: 1px solid #ffffff;
+}
+
+.recommendations > .recommendation > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: #435;
+}
+
+.what-to-watch > h2 {
+  font: 700 0.5rem 'Roboto Mono', monospace;
+}
+
+.tv-content > .smart-apps > .lower-row {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.1rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.lower-row > .apps {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 0.1rem;
+  width: 100%;
+}
+
+.lower-row > div.app-tools {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  font-size: 0.5rem;
+}
+
+.lower-row > .apps > div {
+  padding: 0.5rem;
+  background-color: #fff;
+}
+
+.lower-row > .apps > div > img {
+  width: 1.5rem;
+  height: 1rem;
+  object-fit: contain;
+  object-position: center;
+}
+
+.tv-stand-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  /* border: 5px solid #000; */
+  height: 4rem;
+  width: 100vw;
+  position: relative;
+}
+
+.tv-stand-wrapper .left-side {
+  display: flex;
+  gap: 0.1rem;
   position: absolute;
-  top: 40%;
+  width: 1.5rem;
+  top: -57%;
+  left: 27%;
+  transform: scale(1.4);
+  z-index: -1;
+}
+
+#left-foot {
+  /* transform: rotate3d(0, 1, 0, 180deg); */
+  scale: 0.7;
+}
+
+.tv-stand-wrapper > div#right-side {
+  display: flex;
+  gap: 0.1rem;
+  position: absolute;
+  width: 1.5rem;
+  top: -58%;
+  left: 69%;
+  transform: scale(2);
+  z-index: -1;
+  transform: rotate3d(0, 1, 0, 180deg);
+}
+
+.left-side > .left-circle {
+  width: 1em;
+  height: 3em;
+  background-color: #ffffff;
+  border-radius: 20px;
+  transform: rotate(36.5deg);
+  z-index: 1;
+  position: absolute;
+  top: 12%;
+  left: -15%;
+}
+
+.tv-stand-wrapper .left-side .left-tv-stand {
+  position: relative;
+  width: 0.3em;
+  height: 2em;
+  background-color: #000;
+  border-bottom-right-radius: 2.5rem;
+  border-bottom-left-radius: 0.25rem;
+  border-top-right-radius: 2.5rem;
+  border-top-left-radius: 0.25rem;
+  transform: rotate(40deg);
+}
+
+.left-tv-stand > .left-gradient-texture {
+  width: 50%;
+  height: 100%;
+  border-bottom-right-radius: 2.5rem;
+  border-bottom-left-radius: 0.25rem;
+  background: linear-gradient(145deg, #2f2c2c, #909090);
+  position: absolute;
+  top: 0;
+  left: 20%;
+}
+
+.tv-stand-wrapper .left-side .left-heel {
+  width: 0.3em;
+  height: 1em;
+  background-color: #000000;
+  transform: rotate(-55deg);
+  border-radius: 0.1em;
+  position: absolute;
+  top: 1%;
+  left:70%;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 2.5rem;
+}
+
+.left-heel > .left-heel-texture {
+  width: 70%;
+  height: 100%;
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 2.5rem;
+  background: linear-gradient(145deg, #2f2c2c, #909090);
+  position: absolute;
+  top: 0;
+  left: 20%;
+}
+
+.tv-stand-wrapper .right-side {
+  display: flex;
+  gap: 0.1rem;
+  position: absolute;
+  width: 1.5rem;
+  top: 76%;
+  right: -90%;
+  transform: scale(1.4);
+  z-index: -1;
+}
+
+.right-side > .right-circle {
+  width: 1em;
+  height: 3em;
+  background-color: #ffffff;
+  border-radius: 20px;
+  transform: rotate(-36.5deg);
+  z-index: 1;
+  position: absolute;
+  top: 12%;
+  right: -15%;
+}
+
+.tv-stand-wrapper .right-side .right-tv-stand {
+  position: relative;
+  width: 0.3em;
+  height: 2em;
+  background-color: #000;
+  border-bottom-left-radius: 2.5rem;
+  border-bottom-right-radius: 0.25rem;
+  border-top-left-radius: 2.5rem;
+  border-top-right-radius: 0.25rem;
+  transform: rotate(-40deg);
+}
+
+.right-tv-stand > .right-gradient-texture {
+  width: 50%;
+  height: 100%;
+  border-bottom-left-radius: 2.5rem;
+  border-bottom-right-radius: 0.25rem;
+  background: linear-gradient(145deg, #2f2c2c, #909090);
+  position: absolute;
+  top: 0;
+  right: 20%;
+}
+
+.tv-stand-wrapper .right-side .right-heel {
+  width: 0.3em;
+  height: 1em;
+  background-color: #000000;
+  transform: rotate(55deg);
+  border-radius: 0.1em;
+  position: absolute;
+  top: 1%;
+  right: 70%;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 2.5rem;
+}
+
+.right-heel > .right-heel-texture {
+  width: 70%;
+  height: 100%;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 2.5rem;
+  background: linear-gradient(145deg, #2f2c2c, #909090);
+  position: absolute;
+  top: 0;
+  right: 20%;
 }
