--- a/kali.css
+++ b/kali.css
@@ -18,10 +18,14 @@ header {
   padding-top: 2rem;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
-  position: relative;
+  top: 40%;
+  position: absolute;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 0.25rem;
@@ -35,8 +39,8 @@ button {
 .the-button span {
   position: absolute;
   display: none;
-  top: -1%;
-  left: 2%;
+  top: 1%;
+  left: 90%;
   transform: translateX(0);
   transition: transform 0.3s;
 }
